k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe-deployment
  template:
    metadata:
      labels:
        app: tic-tac-toe-deployment
    spec:
      containers:
        - name: tic-tac-toe-frontend
          image: rutger505/tic-tac-toe-frontend:1.2.3
          ports:
            - containerPort: 3000
        - name: tic-tac-toe-websocket
          image: rutger505/tic-tac-toe-websocket:1.2.3
          ports:
            - containerPort: 3001
