k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe-frontend
  template:
    metadata:
      labels:
        app: tic-tac-toe-frontend
    spec:
      containers:
        - name: tic-tac-toe-frontend
          image: rutger505/tic-tac-toe-frontend:1.2.1
          ports:
            - containerPort: 3000
