k8s/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe-websocket
  template:
    metadata:
      labels:
        app: tic-tac-toe-websocket
    spec:
      containers:
        - name: tic-tac-toe-websocket
          image: rutger505/tic-tac-toe-websocket:1.2.1
          ports:
            - containerPort: 3001
