k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe
spec:
  ingressClassName: nginx
  rules:
    - host: tic-tac-toe.localtest.me
      http:
        paths:
        - path: /socket
          pathType: Prefix
          backend:
            service:
              name: tic-tac-toe-websocket
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tic-tac-toe-frontend
              port:
                number: 80
